[package]
name = "y-webrtc-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4.0"
pretty_env_logger = "0.4"
futures-util = "0.3.24"
tokio-stream = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
custom_error = { version = "1", default-features = true }

[[test]]
name = "integration_test"
